--- a/Android/app/src/main/res/layout/activity_start.xml
+++ b/Android/app/src/main/res/layout/activity_start.xml
@@ -23,11 +23,12 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="136dp"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:weightSum="1">
 
             <TextView
-                android:id="@+id/Kategorie"
+                android:id="@+id/selectCategoryTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -35,16 +36,37 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_weight="0.30"
-                android:text="Kategorie"
+                android:text="Wybierz kategorie"
 
-                />
+                android:textSize="24sp" />
 
             <Spinner
-                android:id="@+id/kategorieSpinner"
+                android:id="@+id/categorySpinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.30" />
+                android:layout_weight="0.09" />
+
+            <TextView
+                android:id="@+id/searchTitleTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Wyszukaj po tytule"
+                android:textSize="24sp" />
+
+            <EditText
+                android:id="@+id/gameTitleEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName" />
+
+            <Button
+                android:id="@+id/searchButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="searchClick"
+                android:text="SZUKAJ" />
+
         </LinearLayout>
 
     </LinearLayout>
